<resources>
    <string name="app_name">FBLA of JCHS</string>
    <string name="app_label">FBLA</string>
    <string name="home">Home</string>
    <string name="aboutUs">About Us</string>
    <string name="joinUs">Join Us</string>
    <string name="social">Social Media</string>
    <string name="officers">Officers</string>
    <string name="currentEvent">Current Events</string>
    <string name="eventSignup">Sign Up for Current Event</string>
    <string name="goldAccent">#FFD700</string>
    <string name="compText">
        Johns Creek FBLA is a nationally recognized chapter with over 20 students who compete nationally annually. Come compete with us to the top.
    </string>
    <string name="eduText">
        FBLA is co-curricular with Career Tech and Engineering (CTAE) courses. This  means that course info is the most up to date as possible.
    </string>
    <string name="commonText">
        Johns Creek FBLA is a proud supporter of March of Dimes and more non-profit organizations. We believe helping our community is a vital part of business.
    </string>
    <string name="innerText">
        Johns Creek FBLA takes what students learn and making it a reality by taking them on field trips and more about business.
    </string>
    <string name="ansQuestion5">
        The Business Achievement Awards (BAA’s) is a program that enriches students’ leadership skills. The four levels are Future, Business, Leader, and America. Students can go through the levels by focusing on activities.
    </string>
    <string name="ansQuestion8">
        The Career and Membership Achievement Program (CMAP) is a program where students can develop their job skills. The three levels of CMAP are Directive, Executive, and President.
    </string>
    <string name="toc">
        The FBLA of JCHS app was written and is owned by Rohit Nachaloor, Siddharth Nachaloor, and Elliot Huang. FBLA of JCHS was distributed under the GPL version 3 license, which is an open-source license that allows anyone to download and run the app; modify the app; freely redistribute the app; and distribute modified versions of the app as long as the modified works are also distributed under the GPL license. FBLA of JCHS was written to present the judges at the Georgia State Leadership Conference at the Hyatt Regency in Atlanta, Georgia. Although unlikely, no form of harassment is allowed on the app, and the creators of this app are not responsible for any harassment that occurs on this app. The creators of the app are also not responsible for any inappropriate use of this app.
    </string>
</resources>
